--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -26,6 +26,9 @@ services:
 	- App\Forms\FormFactory
 	- App\Forms\SignFormFactory
 	- App\Forms\PersonFormFactory
+	- App\Forms\BookFormFactory
 	router: App\RouterFactory::createRouter
 
 	person: App\Model\Person
+	book: App\Model\Book
+	category: App\Model\Category
