--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -33,3 +33,5 @@ services:
 	person: App\Model\Person
 	book: App\Model\Book
 	category: App\Model\Category
+	distribution: App\Model\Distribution
+	week: App\Model\Week
