--- a/app/config/config.local.neon
+++ b/app/config/config.local.neon
@@ -2,9 +2,9 @@ parameters:
 
 database:
 	freesql:
-		dsn: 'mysql:host=sql7.freesqldatabase.com;dbname=sql7122168'
-		user: sql7122168
-		password: PDQluwjZ4X
+		dsn: 'mysql:host=innodb.endora.cz;dbname=sktscore'
+		user: allrisk
+		password: basic16
 		options:
 			lazy: yes
 	localhost:
