import a format čísla
při importu se ukládá skpn_alias vybrané osaby, hezčí formátování čísel
v přehledu výsledků osob

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -33,6 +33,7 @@ services:
 	router: App\RouterFactory::createRouter
 
 	admin: App\Model\Admin
+	filters: App\Templates\Filters
 	person: App\Model\Person
 	center: App\Model\Center
 	book: App\Model\Book
