samostatný model BackupManager

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -23,6 +23,7 @@ session:
 
 services:
 	- App\Model\UserManager
+	- App\Model\BackupManager
 	- App\Forms\FormFactory
 	- App\Forms\SignFormFactory
 	- App\Forms\ChangePasswordFormFactory
